Fix focused label position on mobile

--- a/src/styles/base/form.scss
+++ b/src/styles/base/form.scss
@@ -281,7 +281,7 @@ input[type="file"] {
         margin-bottom: 0;
 
         @include mo(xs) {
-            left: round(nth($input-padding, 2) * $input-padding-xs-factor);
+            left: round(nth($input-padding, 2) * $input-padding-xs-factor) + $input-border-width;
         }
     }
 
